Use aetrion/dns_erlang

--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,7 @@
         {folsom, ".*", {git, "git://github.com/boundary/folsom.git", "HEAD"}},
         {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", {tag, "0.8.6"}}},
         {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", "HEAD"}},
-        {dns, ".*", {git, "git://github.com/aeden/dns_erlang.git", "HEAD"}},
+        {dns, ".*", {git, "git://github.com/aetrion/dns_erlang.git", "HEAD"}},
         {erldns, ".*", {git, "git://github.com/aetrion/erl-dns.git", "HEAD"}}
        ]}.
 
