--- a/rebar.config
+++ b/rebar.config
@@ -16,6 +16,6 @@
         {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", {tag, "0.8.6"}}},
         {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", "HEAD"}},
         {dns, ".*", {git, "git://github.com/aetrion/dns_erlang.git", "HEAD"}},
-        {erldns, ".*", {git, "git://github.com/aetrion/erl-dns.git", "HEAD"}}
+        {erldns, ".*", {git, "git://github.com/aetrion/erl-dns.git", "feature/dnssec-2"}}
        ]}.
 
