--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,7 @@
         {folsom, ".*", {git, "git://github.com/boundary/folsom.git"}},
         {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", {tag, "1.0.0"}}},
         {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git"}},
-        {dns, ".*", {git, "git://github.com/aetrion/dns_erlang.git"}},
-        {erldns, ".*", {git, "git://github.com/aetrion/erl-dns.git", "feature/dnssec-2"}}
+        {dns, ".*", {git, "git://github.com/dnsimple/dns_erlang.git"}},
+        {erldns, ".*", {git, "git://github.com/dnsimple/erldns.git"}}
        ]}.
 
