--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,5 @@
 %%-*- mode: erlang -*-
-{sub_dirs, ["rel"]}.
-
 {cover_enabled, true}.
-
-{lib_dirs, ["deps"]}.
 
 {erl_opts, [debug_info, fail_on_warning,
             {i, "./deps/dns/include"},
@@ -11,11 +7,11 @@
             {parse_transform, lager_transform}]}.
 
 {deps, [
-        {lager, ".*", {git, "git://github.com/basho/lager.git"}},
-        {folsom, ".*", {git, "git://github.com/boundary/folsom.git"}},
+        {lager, ".*", {git, "git://github.com/basho/lager.git", {branch, "master"}}},
+        {folsom, ".*", {git, "git://github.com/boundary/folsom.git", {branch, "master"}}},
         {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", {tag, "1.0.0"}}},
-        {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git"}},
-        {dns, ".*", {git, "git://github.com/dnsimple/dns_erlang.git"}},
-        {erldns, ".*", {git, "git://github.com/dnsimple/erldns.git"}}
+        {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", {branch, "master"}}},
+        {dns, ".*", {git, "git://github.com/dnsimple/dns_erlang.git", {branch, "master"}}},
+        {erldns, ".*", {git, "git://github.com/dnsimple/erldns.git", {branch, "master"}}}
        ]}.
 
