--- a/rebar.config
+++ b/rebar.config
@@ -6,12 +6,11 @@
             {i, "./deps/erldns/include"},
             {parse_transform, lager_transform}]}.
 
-{deps, [
-        {lager, ".*", {git, "git://github.com/basho/lager.git", {branch, "master"}}},
-        {folsom, ".*", {git, "git://github.com/boundary/folsom.git", {branch, "master"}}},
+{deps, [lager,
+        folsom,
         {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", {tag, "1.0.0"}}},
-        {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", {branch, "master"}}},
-        {dns, ".*", {git, "git://github.com/dnsimple/dns_erlang.git", {branch, "master"}}},
-        {erldns, ".*", {git, "git://github.com/dnsimple/erldns.git", {branch, "master"}}}
+        jsx,
+        dns_erlang,
+        erldns
        ]}.
 
