--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,7 @@
 
 {deps, [lager,
         folsom,
-        {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", {tag, "1.0.0"}}},
+        cowboy,
         jsx,
         dns_erlang,
         erldns
