* bump lager to 3.9.2 to fix build

--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 {erl_opts, [debug_info, fail_on_warning,
             {parse_transform, lager_transform}]}.
 
-{deps, [lager,
+{deps, [{lager, "3.9.2"},
         folsom,
         cowboy,
         jsx,
