--- a/rebar.config
+++ b/rebar.config
@@ -1,14 +1,25 @@
 %%-*- mode: erlang -*-
 {cover_enabled, true}.
+{erl_opts, [
+    debug_info,
+    fail_on_warning,
+    {parse_transform, lager_transform}
+]}.
 
-{erl_opts, [debug_info, fail_on_warning,
-            {parse_transform, lager_transform}]}.
+{project_plugins, [
+    erlfmt
+]}.
 
-{deps, [{lager, "3.9.2"},
-        folsom,
-        cowboy,
-        jsx,
-        dns_erlang,
-        erldns
-       ]}.
+{deps, [
+    {lager, "3.9.2"},
+    folsom,
+    cowboy,
+    jsx,
+    dns_erlang,
+    erldns
+]}.
 
+{erlfmt, [
+    write,
+    {print_width, 140}
+]}.
