--- a/.github/workflows/check_deps.yml
+++ b/.github/workflows/check_deps.yml
@@ -9,6 +9,8 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions: write-all
+
 jobs:
   check-deps:
     name: Check Dependencies
