--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,5 @@
+---
+
 version: 2
 updates:
   - package-ecosystem: "github-actions"
@@ -9,3 +11,4 @@ updates:
     labels:
       - task
       - dependencies
+      - automerge
