--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,12 @@
+---
+
 name: CI
 
 on:
   pull_request:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   workflow_dispatch:
 
 concurrency:
@@ -11,6 +14,25 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  markdownlint-cli:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+      - name: Run markdownlint-cli
+        uses: nosborn/github-action-markdown-cli@v3.4.0
+        with:
+          files: .
+          config_file: ".markdownlint.yaml"
+
+  yamllint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+      - name: Run YAML Lint
+        uses: actionshub/yamllint@main
+
   build:
     name: Build
     runs-on: ubuntu-22.04
@@ -41,6 +63,11 @@ jobs:
     strategy:
       matrix:
         otp_version: ['27.1']
+
+    needs:
+      - build
+      - markdownlint-cli
+      - yamllint
 
     steps:
       - uses: actions/checkout@v4
