--- a/rebar.config
+++ b/rebar.config
@@ -1,16 +1,17 @@
-%%-*- mode: erlang -*-
-{cover_enabled, true}.
+{minimum_otp_vsn, "27"}.
+
 {erl_opts, [
     debug_info,
     fail_on_warning,
     {parse_transform, lager_transform}
 ]}.
 
-{minimum_otp_vsn, "27"}.
-
 {project_plugins, [
-    erlfmt,
-    rebar3_depup
+    {rebar3_depup, "~> 0.4"},
+    {rebar3_hex, "~> 7.0"},
+    {rebar3_lint, "~> 3.2"},
+    {rebar3_ex_doc, "~> 0.2"},
+    {erlfmt, "~> 1.6"}
 ]}.
 
 {deps, [
@@ -21,11 +22,33 @@
     erldns
 ]}.
 
-{erlfmt, [
-    write,
-    {print_width, 140}
+{hex, [{doc, #{provider => ex_doc}}]}.
+
+{ex_doc, [
+    {source_url, <<"https://github.com/dnsimple/erldns-admin">>},
+    {main, <<"readme">>},
+    {extras, [
+        {'README.md', #{title => <<"Overview">>}}
+    ]}
 ]}.
 
-{shell, [
-    {apps, [erldns_admin]}
+{erlfmt, [
+    write,
+    {files, [
+        "src/**/*.{hrl,erl,app.src}",
+        "rebar.config"
+    ]}
+]}.
+
+{elvis, [
+    #{
+        dirs => ["src"],
+        filter => "*.erl",
+        ruleset => erl_files
+    },
+    #{
+        dirs => ["."],
+        filter => "rebar.config",
+        ruleset => rebar_config
+    }
 ]}.
