Upgrade all remaining deps, enforcing ranch 2.0 for performance

--- a/rebar.config
+++ b/rebar.config
@@ -15,8 +15,9 @@
 ]}.
 
 {deps, [
-    cowboy,
-    erldns
+    {ranch, "~> 2.0"},
+    {cowboy, "~> 2.0"},
+    {erldns, "~> 3.0"}
 ]}.
 
 {hex, [{doc, #{provider => ex_doc}}]}.
