--- a/rebar.config
+++ b/rebar.config
@@ -2,8 +2,21 @@
 
 {erl_opts, [
     debug_info,
-    fail_on_warning,
-    {parse_transform, lager_transform}
+    warnings_as_errors,
+    warn_unused_vars,
+    warn_export_all,
+    warn_shadow_vars,
+    warn_unused_import,
+    warn_unused_function,
+    warn_bif_clash,
+    warn_unused_record,
+    warn_deprecated_function,
+    warn_obsolete_guard,
+    warn_export_vars,
+    warn_exported_vars,
+    warn_untyped_record,
+    warn_missing_spec,
+    warn_missing_doc
 ]}.
 
 {project_plugins, [
@@ -18,6 +31,28 @@
     {ranch, "~> 2.0"},
     {cowboy, "~> 2.0"},
     {erldns, "~> 3.0"}
+]}.
+
+{shell, [
+    {apps, [erldns_admin]}
+]}.
+
+{dialyzer, [
+    {warnings, [
+        no_return,
+        unmatched_returns,
+        error_handling,
+        underspecs,
+        unknown
+    ]}
+]}.
+
+{xref_checks, [
+    locals_not_used,
+    undefined_functions,
+    undefined_function_calls,
+    deprecated_function_calls,
+    deprecated_functions
 ]}.
 
 {hex, [{doc, #{provider => ex_doc}}]}.
