--- a/.github/workflows/check_deps.yml
+++ b/.github/workflows/check_deps.yml
@@ -16,26 +16,22 @@ permissions: write-all
 jobs:
   check-deps:
     name: Check Dependencies
-    runs-on: ubuntu-24.04
-    strategy:
-      matrix:
-        otp: ['27']
-        rebar3: ['3.24']
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
       - uses: erlef/setup-beam@v1
         with:
-          otp-version: ${{matrix.otp}}
-          rebar3-version: ${{matrix.rebar3}}
+          otp-version: '27.x'
+          rebar3-version: '3.x'
 
       - uses: actions/cache@v4
         with:
           path: |
             ~/.cache/rebar3
             _build
-          key: ${{ runner.os }}-erlang-${{ matrix.otp }}-rebar3-${{ matrix.rebar3 }}-hash-${{hashFiles('rebar.lock')}}
+          key: ${{ runner.os }}-erlang-${{ matrix.otp_version }}-${{ hashFiles('**/*rebar.lock') }}
 
       - name: Build
         run: make build
@@ -48,9 +44,9 @@ jobs:
           cat <<EOF > /tmp/pr-body.md
           Output of running \`rebar3 update-deps\`:
 
-          \```
+          \`\`\`
           $_update_output
-          \```
+          \`\`\`
           EOF
 
           rebar3 fmt --write
@@ -67,5 +63,4 @@ jobs:
           title: "Update dependencies"
           body-path: /tmp/pr-body.md
           labels: "dependencies,task"
-          team-reviewers: "dnsimple/platform"
           delete-branch: true
