--- a/.github/workflows/check_deps.yml
+++ b/.github/workflows/check_deps.yml
@@ -16,19 +16,15 @@ permissions: write-all
 jobs:
   check-deps:
     name: Check Dependencies
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        otp_version: ['27.1.3']
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
       - uses: erlef/setup-beam@v1
         with:
-          otp-version: ${{ matrix.otp_version }}
-          rebar3-version: '3.22.1'
-          version-type: 'strict'
+          otp-version: '27.x'
+          rebar3-version: '3.x'
 
       - uses: actions/cache@v4
         with:
@@ -48,9 +44,9 @@ jobs:
           cat <<EOF > /tmp/pr-body.md
           Output of running \`rebar3 update-deps\`:
 
-          \```
+          \`\`\`
           $_update_output
-          \```
+          \`\`\`
           EOF
 
           rebar3 fmt --write
@@ -67,5 +63,4 @@ jobs:
           title: "Update dependencies"
           body-path: /tmp/pr-body.md
           labels: "dependencies,task"
-          team-reviewers: "dnsimple/platform"
           delete-branch: true
