--- a/rebar.config
+++ b/rebar.config
@@ -1,31 +1,87 @@
-%%-*- mode: erlang -*-
-{cover_enabled, true}.
-{erl_opts, [
-    debug_info,
-    fail_on_warning,
-    {parse_transform, lager_transform}
-]}.
-
 {minimum_otp_vsn, "27"}.
 
+{erl_opts, [
+    debug_info,
+    warnings_as_errors,
+    warn_unused_vars,
+    warn_export_all,
+    warn_shadow_vars,
+    warn_unused_import,
+    warn_unused_function,
+    warn_bif_clash,
+    warn_unused_record,
+    warn_deprecated_function,
+    warn_obsolete_guard,
+    warn_export_vars,
+    warn_exported_vars,
+    warn_untyped_record,
+    warn_missing_spec,
+    warn_missing_doc
+]}.
+
 {project_plugins, [
-    erlfmt,
-    rebar3_depup
+    {rebar3_depup, "~> 0.4"},
+    {rebar3_hex, "~> 7.0"},
+    {rebar3_lint, "~> 3.2"},
+    {rebar3_ex_doc, "~> 0.2"},
+    {erlfmt, "~> 1.6"}
 ]}.
 
 {deps, [
-    {lager, "3.9.2"},
-    folsom,
-    cowboy,
-    dns_erlang,
-    erldns
-]}.
-
-{erlfmt, [
-    write,
-    {print_width, 140}
+    {ranch, "~> 2.0"},
+    {cowboy, "~> 2.0"},
+    {erldns, "~> 3.0"}
 ]}.
 
 {shell, [
     {apps, [erldns_admin]}
+]}.
+
+{dialyzer, [
+    {warnings, [
+        no_return,
+        unmatched_returns,
+        error_handling,
+        underspecs,
+        unknown
+    ]}
+]}.
+
+{xref_checks, [
+    locals_not_used,
+    undefined_functions,
+    undefined_function_calls,
+    deprecated_function_calls,
+    deprecated_functions
+]}.
+
+{hex, [{doc, #{provider => ex_doc}}]}.
+
+{ex_doc, [
+    {source_url, <<"https://github.com/dnsimple/erldns-admin">>},
+    {main, <<"readme">>},
+    {extras, [
+        {'README.md', #{title => <<"Overview">>}}
+    ]}
+]}.
+
+{erlfmt, [
+    write,
+    {files, [
+        "src/**/*.{hrl,erl,app.src}",
+        "rebar.config"
+    ]}
+]}.
+
+{elvis, [
+    #{
+        dirs => ["src"],
+        filter => "*.erl",
+        ruleset => erl_files
+    },
+    #{
+        dirs => ["."],
+        filter => "rebar.config",
+        ruleset => rebar_config
+    }
 ]}.
